# data

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/actions/setup/: action.yaml
.github/shared/setup/: action.yaml
.github/workflows/: ci.yaml  ci.yml
.tests/integration/: test_workflow.py
.tests/integration/data/resources/: format.json  labels.json
.tests/integration/expected/: monthly_time_series.json
resources/: labels.json
results/: monthly_time_series.json
tests/integration/: test_workflow.py
tests/integration/data/data/: source.md
tests/integration/data/resources/: labels.json  styles.json
tests/integration/expected/: formatted_monthly_time_series.json  monthly_time_series.json
tests/unit/: test_aggegations.py  test_categories.py  test_counts.py  test_groupings.py  test_metric.py  test_utils.py
tests/unit/source_conversion/: test_source_conversion.py
tests/unit/source_conversion/data/data/2016/: archive.rar
tests/unit/source_conversion/expected/2023/: gps.feather  nasledky.feather
tests/unit/test_converters/: test_additions.py  test_appends_2023.py  test_cause_filters.py
tests/unit/test_metrics/: test_metric.py
tests/unit/test_source_conversion/: test_source_conversion.py
tests/unit/test_source_conversion/data/data/2023/: archive.rar
tests/unit/test_source_conversion/expected/2016/: chodci.feather  nehody.feather
tests/unit/test_source_conversion/expected/2023/: chodci.feather  nehody.feather  vozidla.feather
workflow/: Snakefile
workflow/envs/: json.yaml  pandas.yaml  rarfile.yaml
workflow/scripts/: adjust_data_2016.py  adjust_data_2023.py  category_monthly_time_series_2016.py  category_monthly_time_series_2023.py  category_monthly_time_series_2023_metrics.py  category_monthly_time_series_common_metrics.py  compose_monthly_time_series.py  convert_data_2016.py  convert_data_2023.py  merge_category_monthly_time_series.py  merge_monthly_time_series.py  monthly_time_series_2016.py  monthly_time_series_2023.py  monthly_time_series_common.py  normalize_monthly_time_series.py  select_months_from_monthly_time_series.py  strip_format_from_monthly_time_series.py  utils.py
workflow/scripts/metrics/: aggregations.py  groupings.py  metric.py
workflow/scripts/metrics/converters/: additions.py  appends_2023.py  cause_filters.py
