[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silnice-v-cislech-data"
description = 'Workflow to export time series from Czech Police crash data.'
version = "0"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = ["roads", "streets", "crash", "data"]
authors = [
  { name = "eduardsubert", email = "eduardsubert@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "orjson>=3.10",
  "pandas>=2.2.3",
  "pyarrow>=17.0.0",
  "lxml>=5.3.0",
  "rarfile>=4.2",
  "snakemake>=8.24.1",
]

[project.urls]
Documentation = "https://github.com/Silnice-v-cislech/data/blob/main/README.md"
Issues = "https://github.com/Silnice-v-cislech/data/issues"
Source = "https://github.com/Silnice-v-cislech/data"

[tool.hatch.envs.ipython]
extra-dependencies = [
  "ipython",
  "ipdb",
]
[tool.hatch.envs.ipython.scripts]
run = "ipython"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disable_error_code = "name-defined"  # Snakemake is not defined

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:workflow/scripts}"

[tool.hatch.envs.tests]
extra-dependencies = [
  "pytest>=8.3.3",
]
[tool.hatch.envs.tests.scripts]
all = "pytest tests/"
integration = "pytest tests/integration/"
unit = "pytest tests/unit/"
